[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"

rdkafka = { version = "0.29.0", features = ["sasl"] }
tokio = { version =  "1.19.2", features = ["full"]}
chrono = { version = "0.4", features = ["serde"] }
hdrhistogram = "7.5.2"
strum = { version = "0.24", features = ["derive"] }
futures = "0.3.25"
tui = "0.19.0"
crossterm="0.25"
models = {path="../models"}
kafka = {path = "../kafka"}