[package]
name = "kafgrind"
version = "0.1.0"
edition = "2021"
license="MIT"
keywords=["kafka", "benchmarking"]
authors=["Anil Sharma"]
description="Benchmarking crate for kafka"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap= { version="4.3.0", features=["derive"] }
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
futures = "0.3.27"
rdkafka = { version = "0.29.0", features = ["sasl"] }
tokio = { version =  "1.19.2", features = ["full"]}
chrono = { version = "0.4", features = ["serde"] }
hdrhistogram = "7.5.2"
time = { version = "0.3.17" }