[package]
name = "kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"

rdkafka = { version = "0.29.0", features = ["sasl"] }
tokio = { version =  "1.19.2", features = ["full"]}
chrono = { version = "0.4", features = ["serde"] }

futures = "0.3.25"

dyn-clone="1.0.9"
async-trait = "0.1"
strum = { version = "0.24", features = ["derive"] }