[package]
name = "producer"
version = "0.1.0"
edition = "2021"
license="MIT"
keywords=["kafka", "benchmarking"]
authors=["Anil Sharma"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.4", features = ["derive"] }

serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"

rdkafka = { version = "0.29.0", features = ["sasl"] }
tokio = { version =  "1.19.2", features = ["full"]}
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
futures = "0.3.25"
async-recursion = "1.0.0"
dyn-clone="1.0.9"
async-trait = "0.1"
strum = { version = "0.24", features = ["derive"] }
#models = {path = "../models"}
kafka = {path = "../kafka"}
uuid= {version="1.2.2", features = ["v4"]}
time = { version = "0.3.17" }
